added plugin info endpoint

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "incomaker/api",
     "description": "Incomaker API library",
+    "version": "3.0",
     "license": "GPL-2.0-or-later",
     "authors": [
         {
