--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,20 @@
 {
-    "name": "incomaker/api",
-    "description": "Incomaker API library",
-    "license": "GPL-2.0-or-later",
-    "authors": [
-        {
-            "name": "Incomaker",
-            "email": "support@incomaker.com"
-        }
-    ],
-    "require": {
-        "ext-json": "*"
-    },
-    "autoload": {
-        "psr-4": {
-            "Incomaker\\Api\\": ""
-        }
-    }
+	"name": "incomaker/api",
+	"description": "Incomaker API library",
+	"license": "GPL-2.0-or-later",
+	"authors": [
+		{
+			"name": "Incomaker",
+			"email": "support@incomaker.com"
+		}
+	],
+	"require": {
+		"ext-json": "*",
+		"ext-curl": "*"
+	},
+	"autoload": {
+		"psr-4": {
+			"Incomaker\\Api\\": ""
+		}
+	}
 }
